# thinking-prompt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
changes/: unreleased.md
examples/: basic.py  chat_demo.py  clear_demo.py  completer_demo.py  demo.py  demo_animated_separator.py  demo_messages_during_thinking.py  demo_progress_line.py  demo_showcase.py  dialog_test.py  progress_demo.py  settings_dialog_demo.py  streaming.py
tests/: __init__.py  conftest.py  test_dialog.py  test_display.py  test_history.py  test_settings_dialog.py  test_thinking.py  test_thread_safety.py  test_types.py
thinking_prompt/: __init__.py  app_info.py  dialog.py  display.py  history.py  layout.py  session.py  settings_dialog.py  styles.py  thinking.py  types.py
